tools/crates/vendor/toml_edit/tests/fixtures/invalid/inline-table/no-close-2.stderr
TOML parse error at line 1, column 7
  |
1 | a={b=1
  |       ^
invalid inline table
expected `}`
